# image-text-retrieval

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
src/: clip_app.py  utils.py
src/app/: app.py
src/modules/: model.py  prompt_creator.py
tests/: test_prompt_creator.py
