[tool.poetry]
name = "image-text-retrieval"
version = "0.1.0"
description = "Detection of amenities in property images using pre-trained CLIP and ALIGN models."
authors = ["Katerina Vankova"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.34.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
