[tool.poetry]
name = "image-text-retrieval"
version = "0.1.0"
description = "Detection of amenities in property images using pre-trained CLIP and ALIGN models."
authors = ["Katerina Vankova"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.34.0"
pandas = "^2.2.2"
transformers = "^4.40.2"
torch = "2.2.2"
python-box = "^7.1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
ruff = "^0.4.4"
mypy = "^1.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
